--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
 
 script:
   - echo "Building for PROD"
-  - ng build --prod --base-href=/LearnAngular/
+  - ng build --prod --base-href=/qu-mart/
 
 after_success:
   - echo "Build SUCCESS"
@@ -25,7 +25,7 @@ deploy:
   keep-history: true
   on:
     branch: master
-  local_dir: dist/LearnAngular/  # Only copy the /dist/LearnAngular contents (Angular > 6)
+  local_dir: dist/qu-mart/  # Only copy the /dist/qu-mart contents (Angular > 6)
 
 after_deploy:
   - echo "Deployed to GH Pages"
