--- a/angular.json
+++ b/angular.json
@@ -20,13 +20,12 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",              
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css"             
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js"
