--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
     "@angular/router": "~9.1.0",
     "bootstrap": "4.3.1",
     "hammerjs": "^2.0.8",
-    "jquery": "~3.4.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
     "@types/bootstrap": "4.3.0",
-    "@types/jquery": "~3.3.29",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "~3.3.29",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
